# spark-training

./: average-friends.py  cmdb.csv  cmdb.py  fakefriends.csv  map-reduce.py  max-temp.py  min-temp.py  pyproject.toml  ratings-counter.py  reduce-example.py  totalspend-df.py  totalspend.py  wordcount.py
