[tool.poetry]
name = "spark-training"
version = "0.1.0"
description = ""
authors = ["Alessandro Santini <alessandro.santini@toremo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
